analysis/symbol-light-classes/testData/lightClassByFqName/compilationErrors/MultiplatformJvmFacade.java
public final class MyFacadeKt /* mypack.MyFacadeKt*/ {
  @org.jetbrains.annotations.NotNull()
  public static final @org.jetbrains.annotations.NotNull() mypack.MyJvmClass getCommonVariable1();//  getCommonVariable1()

  @org.jetbrains.annotations.NotNull()
  public static final @org.jetbrains.annotations.NotNull() mypack.MyJvmClass getCommonVariable2();//  getCommonVariable2()

  @org.jetbrains.annotations.NotNull()
  public static final @org.jetbrains.annotations.NotNull() mypack.MyJvmClass getCommonVariableWithActualization();//  getCommonVariableWithActualization()

  @org.jetbrains.annotations.NotNull()
  public static final @org.jetbrains.annotations.NotNull() mypack.MyJvmClass getIntermediateVariable1();//  getIntermediateVariable1()

  @org.jetbrains.annotations.NotNull()
  public static final @org.jetbrains.annotations.NotNull() mypack.MyJvmClass getIntermediateVariable2();//  getIntermediateVariable2()

  @org.jetbrains.annotations.NotNull()
  public static final @org.jetbrains.annotations.NotNull() mypack.MyJvmClass getIntermediateVariableWithActualization();//  getIntermediateVariableWithActualization()

  @org.jetbrains.annotations.NotNull()
  public static final @org.jetbrains.annotations.NotNull() mypack.MyJvmClass getJvmVariable1();//  getJvmVariable1()

  @org.jetbrains.annotations.NotNull()
  public static final @org.jetbrains.annotations.NotNull() mypack.MyJvmClass getJvmVariable2();//  getJvmVariable2()

  public static final void commonFunction1(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyCommonClass);//  commonFunction1(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() mypack.MyCommonClass)

  public static final void commonFunction2(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyCommonClass);//  commonFunction2(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() mypack.MyCommonClass)

  public static final void commonFunctionWithActualization(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyCommonClass, @org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyIntermediateClass);//  commonFunctionWithActualization(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() mypack.MyCommonClass, @org.jetbrains.annotations.NotNull() mypack.MyIntermediateClass)

  public static final void intermediateFunction1(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyCommonClass, @org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyIntermediateClass);//  intermediateFunction1(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() mypack.MyCommonClass, @org.jetbrains.annotations.NotNull() mypack.MyIntermediateClass)

  public static final void intermediateFunction2(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyCommonClass, @org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyIntermediateClass);//  intermediateFunction2(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() mypack.MyCommonClass, @org.jetbrains.annotations.NotNull() mypack.MyIntermediateClass)

  public static final void intermediateFunctionWithActualization(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyCommonClass, @org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyIntermediateClass);//  intermediateFunctionWithActualization(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() mypack.MyCommonClass, @org.jetbrains.annotations.NotNull() mypack.MyIntermediateClass)

  public static final void jvmFunction1(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyCommonClass, @org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyIntermediateClass, @org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyJvmClass);//  jvmFunction1(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() mypack.MyCommonClass, @org.jetbrains.annotations.NotNull() mypack.MyIntermediateClass, @org.jetbrains.annotations.NotNull() mypack.MyJvmClass)

  public static final void jvmFunction2(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyCommonClass, @org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyIntermediateClass, @org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyJvmClass);//  jvmFunction2(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() mypack.MyCommonClass, @org.jetbrains.annotations.NotNull() mypack.MyIntermediateClass, @org.jetbrains.annotations.NotNull() mypack.MyJvmClass)

  public static final void setCommonVariable1(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyJvmClass);//  setCommonVariable1(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass)

  public static final void setCommonVariable2(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyJvmClass);//  setCommonVariable2(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass)

  public static final void setCommonVariableWithActualization(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyJvmClass);//  setCommonVariableWithActualization(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass)

  public static final void setIntermediateVariable1(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyJvmClass);//  setIntermediateVariable1(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass)

  public static final void setIntermediateVariable2(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyJvmClass);//  setIntermediateVariable2(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass)

  public static final void setIntermediateVariableWithActualization(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyJvmClass);//  setIntermediateVariableWithActualization(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass)

  public static final void setJvmVariable1(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyJvmClass);//  setJvmVariable1(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass)

  public static final void setJvmVariable2(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyJvmClass);//  setJvmVariable2(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass)
}
